# src/Api/OpenAPI/Server/Model/CodeStatisticsResponse.php
@@ -1,0 +1,292 @@
+<?php
+
+/**
+ * CodeStatisticsResponse.
+ *
+ * PHP version 8.1.1
+ *
+ * @category Class
+ *
+ * @author   OpenAPI Generator team
+ *
+ * @see     https://github.com/openapitools/openapi-generator
+ */
+
+/**
+ * Catroweb API.
+ *
+ * API for the Catrobat Share Platform
+ *
+ * The version of the OpenAPI document: v1.6.0
+ * Contact: webmaster@catrobat.org
+ * Generated by: https://github.com/openapitools/openapi-generator.git
+ */
+
+/**
+ * NOTE: This class is auto generated by the openapi generator program.
+ * https://github.com/openapitools/openapi-generator
+ * Do not edit the class manually.
+ */
+
+namespace OpenAPI\Server\Model;
+
+use JMS\Serializer\Annotation\SerializedName;
+use JMS\Serializer\Annotation\Type;
+use Symfony\Component\Validator\Constraints as Assert;
+
+/**
+ * Class representing the CodeStatisticsResponse model.
+ *
+ * @author  OpenAPI Generator team
+ */
+class CodeStatisticsResponse
+{
+  /**
+   * Abstraction score (0-3).
+   *
+   * @SerializedName("score_abstraction")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_abstraction = null;
+
+  /**
+   * Parallelism score (0-3).
+   *
+   * @SerializedName("score_parallelism")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_parallelism = null;
+
+  /**
+   * Synchronization score (0-3).
+   *
+   * @SerializedName("score_synchronization")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_synchronization = null;
+
+  /**
+   * Logical thinking score (0-3).
+   *
+   * @SerializedName("score_logical_thinking")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_logical_thinking = null;
+
+  /**
+   * Flow control score (0-3).
+   *
+   * @SerializedName("score_flow_control")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_flow_control = null;
+
+  /**
+   * User interactivity score (0-3).
+   *
+   * @SerializedName("score_user_interactivity")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_user_interactivity = null;
+
+  /**
+   * Data representation score (0-3).
+   *
+   * @SerializedName("score_data_representation")
+   *
+   * @Assert\Type("int")
+   *
+   * @Type("int")
+   */
+  protected ?int $score_data_representation = null;
+
+  /**
+   * Constructor.
+   *
+   * @param array|null $data Associated array of property values initializing the model
+   */
+  public function __construct(?array $data = null)
+  {
+    if (is_array($data)) {
+      $this->score_abstraction = array_key_exists('score_abstraction', $data) ? $data['score_abstraction'] : $this->score_abstraction;
+      $this->score_parallelism = array_key_exists('score_parallelism', $data) ? $data['score_parallelism'] : $this->score_parallelism;
+      $this->score_synchronization = array_key_exists('score_synchronization', $data) ? $data['score_synchronization'] : $this->score_synchronization;
+      $this->score_logical_thinking = array_key_exists('score_logical_thinking', $data) ? $data['score_logical_thinking'] : $this->score_logical_thinking;
+      $this->score_flow_control = array_key_exists('score_flow_control', $data) ? $data['score_flow_control'] : $this->score_flow_control;
+      $this->score_user_interactivity = array_key_exists('score_user_interactivity', $data) ? $data['score_user_interactivity'] : $this->score_user_interactivity;
+      $this->score_data_representation = array_key_exists('score_data_representation', $data) ? $data['score_data_representation'] : $this->score_data_representation;
+    }
+  }
+
+  /**
+   * Gets score_abstraction.
+   */
+  public function getScoreAbstraction(): ?int
+  {
+    return $this->score_abstraction;
+  }
+
+  /**
+   * Sets score_abstraction.
+   *
+   * @param int|null $score_abstraction Abstraction score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreAbstraction(?int $score_abstraction = null): self
+  {
+    $this->score_abstraction = $score_abstraction;
+
+    return $this;
+  }
+
+  /**
+   * Gets score_parallelism.
+   */
+  public function getScoreParallelism(): ?int
+  {
+    return $this->score_parallelism;
+  }
+
+  /**
+   * Sets score_parallelism.
+   *
+   * @param int|null $score_parallelism Parallelism score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreParallelism(?int $score_parallelism = null): self
+  {
+    $this->score_parallelism = $score_parallelism;
+
+    return $this;
+  }
+
+  /**
+   * Gets score_synchronization.
+   */
+  public function getScoreSynchronization(): ?int
+  {
+    return $this->score_synchronization;
+  }
+
+  /**
+   * Sets score_synchronization.
+   *
+   * @param int|null $score_synchronization Synchronization score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreSynchronization(?int $score_synchronization = null): self
+  {
+    $this->score_synchronization = $score_synchronization;
+
+    return $this;
+  }
+
+  /**
+   * Gets score_logical_thinking.
+   */
+  public function getScoreLogicalThinking(): ?int
+  {
+    return $this->score_logical_thinking;
+  }
+
+  /**
+   * Sets score_logical_thinking.
+   *
+   * @param int|null $score_logical_thinking Logical thinking score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreLogicalThinking(?int $score_logical_thinking = null): self
+  {
+    $this->score_logical_thinking = $score_logical_thinking;
+
+    return $this;
+  }
+
+  /**
+   * Gets score_flow_control.
+   */
+  public function getScoreFlowControl(): ?int
+  {
+    return $this->score_flow_control;
+  }
+
+  /**
+   * Sets score_flow_control.
+   *
+   * @param int|null $score_flow_control Flow control score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreFlowControl(?int $score_flow_control = null): self
+  {
+    $this->score_flow_control = $score_flow_control;
+
+    return $this;
+  }
+
+  /**
+   * Gets score_user_interactivity.
+   */
+  public function getScoreUserInteractivity(): ?int
+  {
+    return $this->score_user_interactivity;
+  }
+
+  /**
+   * Sets score_user_interactivity.
+   *
+   * @param int|null $score_user_interactivity User interactivity score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreUserInteractivity(?int $score_user_interactivity = null): self
+  {
+    $this->score_user_interactivity = $score_user_interactivity;
+
+    return $this;
+  }
+
+  /**
+   * Gets score_data_representation.
+   */
+  public function getScoreDataRepresentation(): ?int
+  {
+    return $this->score_data_representation;
+  }
+
+  /**
+   * Sets score_data_representation.
+   *
+   * @param int|null $score_data_representation Data representation score (0-3)
+   *
+   * @return $this
+   */
+  public function setScoreDataRepresentation(?int $score_data_representation = null): self
+  {
+    $this->score_data_representation = $score_data_representation;
+
+    return $this;
+  }
+}
